--- a/.gitignore
+++ b/.gitignore
@@ -29,15 +29,12 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
+# Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
 # Dependency directories
 node_modules/
 jspm_packages/
-
-# TypeScript v1 declaration files
-typings/
 
 # Optional npm cache directory
 .npm
@@ -57,5 +54,11 @@ typings/
 # dotenv environment variables file
 .env
 
-# next.js build output
-.next
+.vscode
+package-lock.json
+yarn.lock
+docs
+
+\.vscode/
+\.idea/
+desktop.ini
