src: TS Rewrite and bug fixing Someone test pls w.w

--- a/guides/.docconfig.json
+++ b/guides/.docconfig.json
@@ -1,7 +1,11 @@
-[{
-    "name": "Getting Started",
-    "files": [{
+[
+    {
         "name": "Getting Started",
-        "path": "GettingStarted.md"
-    }]
-}]
+        "files": [
+            {
+                "name": "Getting Started",
+                "path": "GettingStarted.md"
+            }
+        ]
+    }
+]
