--- a/package.json
+++ b/package.json
@@ -1,27 +1,47 @@
 {
-  "name": "klasa-nms",
-  "version": "0.0.1",
-  "description": "A klasa plugin to seamlessly replicate no-mention-spam behavior in klasa bots",
-  "main": "src/index.js",
-  "scripts": {
-    "lint": "npx eslint --fix src && npx eslint --fix --config .eslintrcmd.json --ext md guides && npx tslint --fix 'typings/*.ts'",
-    "test": "npx eslint src && npx tslint 'typings/*.ts' && npx eslint --config .eslintrcmd.json --ext md guides && npx markdownlint guides README.md",
-    "docs": "npx dg --source src --custom guides/.docconfig.json --output docs/docs.json --logging"
+  "name": "@kcp/no-mention-spam",
+  "version": "1.0.0",
+  "description": "A klasa plugin to seamlessly replicate no-mention-spam behavior in Klasa bots",
+  "homepage": "https://github.com/KlasaCommunityPlugins/no-mention-spam",
+  "bugs": {
+    "url": "https://github.com/KlasaCommunityPlugins/no-mention-spam/issues"
   },
-  "author": "bdistin",
   "license": "MIT",
+  "author": "KlasaCommunityPlugins",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KlasaCommunityPlugins/no-mention-spam.git"
+  },
+  "scripts": {
+    "test:lint": "yarn tslint 'src/*.ts' && yarn eslint --config .eslintrcmd.json --ext md guides && yarn markdownlint guides README.md",
+    "build": "yarn tsc",
+    "docs": "yarn build && yarn dg --source dist --custom guides/.docconfig.json --output dist/docs.json --logging"
+  },
   "peerDependencies": {
-    "klasa": "github:dirigeants/klasa#master",
-    "discord.js": "github:discordjs/discord.js#master"
+    "discord.js": "github:discordjs/discord.js",
+    "klasa": "github:dirigeants/klasa"
   },
   "devDependencies": {
+    "@kcp/lint": "github:KlasaCommunityPlugins/lint-files",
     "@types/node": "^11.11.3",
+    "discord.js": "github:discordjs/discord.js",
     "docgen": "github:dirigeants/docsgen",
-    "eslint": "^5.15.3",
+    "eslint": "^5.3.0",
     "eslint-config-klasa": "github:dirigeants/klasa-lint",
-    "eslint-plugin-markdown": "^1.0.0",
+    "eslint-plugin-markdown": "^1.0.0-beta.6",
+    "klasa": "github:dirigeants/klasa",
     "markdownlint-cli": "^0.14.0",
     "tslint": "^5.14.0",
     "typescript": "^3.3.3333"
-  }
+  },
+  "engines": {
+    "node": ">=10.1.0"
+  },
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ]
 }
